Added Structure API and relevant StructureBlock (no texture yet), Particles now run all math Async by default (if need to use sync logic, run it using BukkitRunnable), Try now uses monadic structure (all usages must update themselves), MultiblockEntity and BlockEntity now use base class AbstractPropertyEntity to remove code duplication, CustomBlock#place no longer replaces the placed block (which caused state reset), Added ItemPredicate for weak stack checks, ItemTag now uses ItemPredicate, Tag API has undergone significant breaking changes in this update, no longer need to cast DataComponent when getting by #getData(Class), Database API has been rewritten from the ground up, any usages must be updated, Added MySQL support to Database API, added Adapter to serialize/deserialize any given BlockData, new registries: PREDICATES (ItemPredicate), STRUCTURES (Structure) and PROCESSOR_TYPES (StructureProcessorType<?>)